# CHANGELOG

This is rather free-form for now, but eventually this will be properly timestamped, and will mention the version the changes apply to!

2022-09-01 Fred Mercy <fred@folkloreinc.ca>

    * Fixes:
        - Navigation buttons on desktop now using IconButton (adds hover and active states, and fixes styles)
        - SlidingButtons renamed to ToggleButton with different props to simplify it somewhat
        - Clicking on the MenuDots toggles the Screens menu again, on mobile
        - Re-implemented the custom ViewerMenu styles, for buttons, menu dots, and share options

2022-08-30 Fred Mercy <fred@folkloreinc.ca>

    * Changed recent hooks to consolidate into new hooks:
        - `useDragProgress` allows for getting a drag event and binding a function on it
        - it uses `useSpringValue` to tween any numeric value
        - it allows for animating styles on state changes
    * Reimplemented menus, horoscope screen (UrbaniaHoroscope) and screen transitions to leverage the new hooks

2022-08-27 Fred Mercy <fred@folkloreinc.ca>

    * Added a new hook `useProgressTransition` which leverages the `useTransitionStyles` and `useSpring` hooks, and allows for tweening styles that follow the value of a state variable
    * Added a new hook `useVerticalDrag`
    * Changed the way the main navigation menu is triggered and animated to leverage these new hooks
    * Added gestures for share menu (MenuShare.jsx) as well as for the screens menu (MenuPreview.jsx)
    * Fixed issue with mute button not appearing on an `Audio` type screen

2022-08-22 Fred Mercy <fred@folkloreinc.ca>

    * Added new hook `useTransitionStyles` to help when working with `use-spring` and `use-gesture`
    * Added new gestures and transitions to `Horoscope` screen type
    * Added more options to `useLongPress` hook
    * Renamed all the screens' `styles.module.scss` to reflect their screen name
    * Suppressed errors

2022-08-11 Fred Mercy <fred@folkloreinc.ca>
