@@ -25,3 +25,7 @@
         margin-top: 5px;
     }
 }
+
+.button {
+    font-size: 1rem;
+}
