@@ -108,6 +108,7 @@
 
 .menuButton {
     padding: 0.5rem 0.75rem;
+    font-size: 1rem;
 }
 
 .slidingButton {
