@@ -191,5 +191,5 @@
     z-index: 1;
     background-color: rgba(0, 0, 0, 0.75);
     pointer-events: none;
-    backdrop-filter: blur(0.5rem);
+    // backdrop-filter: blur(0.5rem);
 }
